# Service-Hackathon-February-2023

./: .env  .gitignore  Dockerfile  Makefile  Pipfile  create_db.py  docker-compose.yml  pyproject.toml  readme.md
app/: config.py  main.py
app/database/: __init__.py  crud.py  database.py  models.py  schemas.py
app/routers/: __init__.py  clients.py  external_service.py  phone_zones.py
app/routers/version_old/: __init__.py  clients.py  external_service.py  phone_zones.py
databases/: localService.sqlite
